@@ -1,6 +1,7 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
-   * Added --probability option (issue 53).
+   * Added --since and --sincecolumn options for issue 53.
+   * Added --probability option for issue 53.
    * A missing table caused a crash (issue 35).
    * Functions specified with --function were not optimized (issue 43).
 
